--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h3>HelloWorld</h3>
+	<form action="/servlet/TimeStampServlet" method="post">
+		<h3>HelloWorld</h3>	
+		<button type="submit">獲得 console 的按鈕</button>
+	</form>
+
 </body>
 </html>
