--- a/src/main/webapp/html/area_form.html
+++ b/src/main/webapp/html/area_form.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body align="center">
+<body align="center" bgcolor="#cccccc">
 	<form action="/JavaWeb-20220418/servlet/area" method="post" class="pure-form">
 		<fieldset>
 			<legend>計算圓面積與球體積</legend>
